--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="css/bootstrap.css" rel="stylesheet">
+		<link href="css/style.css" rel="stylesheet">
 		<script src="js/bootstrap.js"></script>
 		<title>Bojan Zdelar</title>
 	</head>
 	<body id="page-top">
-		<nav class="navbar navbar-expand-lg navbar-dark bg-dark text-uppercase fixed-top">
+		<nav class="navbar navbar-expand-lg navbar-light bg-light text-uppercase fixed-top">
 			<div class="container">
 				<a class="navbar-brand" href="#page-top">Bojan Zdelar</a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -23,5 +24,6 @@
 				</div>
 			</div>
 		</nav>
+		<header></header>
 	</body>
 </html>
