--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
 		<link href="css/bootstrap.css" rel="stylesheet">
 		<link href="css/style.css" rel="stylesheet">
 		<script src="js/bootstrap.js"></script>
+		<script src="js/script.js" defer></script>
+		<script src="js/achievements.js" defer></script>
 		<title>Bojan Zdelar</title>
 	</head>
+
 	<body id="page-top">
-		<nav class="navbar navbar-expand-lg navbar-light bg-light text-uppercase fixed-top">
+
+		<nav class="navbar navbar-expand-lg navbar-light bg-light text-uppercase fixed-top shadow">
 			<div class="container">
 				<a class="navbar-brand" href="#page-top">Bojan Zdelar</a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -17,13 +21,61 @@
 				</button>
 				<div class="collapse navbar-collapse" id="navbarResponsive">
 					<ul class="navbar-nav me-auto">
-						<li class="nav-item"><a class="nav-link py-3 px-lg-3" href="#">About</a></li>
-						<li class="nav-item"><a class="nav-link py-3 px-lg-3" href="#">Achievements</a></li>
-						<li class="nav-item"><a class="nav-link py-3 px-lg-3" href="#">Contact</a></li>
+						<li class="nav-item"><a class="nav-link py-3 px-lg-3" href="#about">About</a></li>
+						<li class="nav-item"><a class="nav-link py-3 px-lg-3" href="#achievements-section">Achievements</a></li>
+						<li class="nav-item"><a class="nav-link py-3 px-lg-3" href="#supporters">Supporters</a></li>
+						<li class="nav-item"><a class="nav-link py-3 px-lg-3" href="#supporters">Contact</a></li>
 					</ul>
 				</div>
 			</div>
 		</nav>
+
 		<header></header>
+
+		<section class="bg-light text-dark py-5" id="about">
+			<div class="container">
+				<h2 class="text-center text-uppercase">About</h2>
+				<hr>
+				Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, iure ullam voluptatum quod quia vel porro dicta? Debitis dolor quisquam earum nesciunt. Porro provident consequuntur quod. Tempora aspernatur velit ipsum?
+				Eius unde laboriosam nihil adipisci non omnis doloribus aliquam enim pariatur autem, hic provident error nostrum itaque eaque reiciendis voluptate et animi ducimus? Molestiae labore repellat nobis dignissimos, quam quibusdam.
+				Sit vero repellendus ab iure sunt cumque laborum doloremque atque, placeat a nulla! Ratione, atque, error dolor aperiam veniam suscipit molestias labore nihil ab a maxime nisi fuga eaque consectetur.
+				Voluptate, deserunt, temporibus assumenda nulla placeat veniam possimus maiores repellat illum, unde ex ratione! Repellendus fuga, earum tempora labore temporibus dicta nihil corrupti? Delectus nam, atque provident totam reprehenderit molestiae?
+				Vel doloremque earum voluptates? Fugiat ab delectus, enim aliquid voluptates quia animi est asperiores aperiam veritatis quos sed rerum odit voluptatibus natus aliquam dolorem. Molestiae eligendi vitae ex beatae minima!
+				Harum labore incidunt quasi reiciendis fuga odit laborum possimus consequuntur inventore id corrupti repellat deleniti error maiores similique exercitationem, voluptatibus, vero alias architecto ipsum minus rem eaque commodi doloribus? Quos.
+				Laudantium mollitia dolorum temporibus ab error doloremque officiis fugiat nobis animi iusto autem et quisquam recusandae corrupti, quaerat repellendus? Nam expedita maxime eius hic laborum rerum quod non repudiandae! Non?
+				Optio culpa praesentium repellat ducimus voluptatibus illum enim, facilis animi eum expedita unde cum? Sed omnis dolorum optio fugiat quod magni repudiandae, alias necessitatibus in excepturi commodi tempore voluptatem nihil!
+				Quaerat accusantium iusto excepturi. Sint velit veritatis, inventore exercitationem quaerat optio porro eveniet iusto maiores, quod laborum necessitatibus quae obcaecati assumenda ut illum soluta saepe consequatur accusamus, eum facere libero!
+				Neque incidunt, natus quos vel libero odio nobis assumenda nulla molestiae dicta delectus similique tenetur suscipit? Quasi placeat blanditiis, saepe itaque, culpa possimus dolorem vero, quos quae recusandae tempore consectetur.
+			</div>
+		</section>
+
+		<section class="bg-primary text-dark py-5" id="achievements-section">
+			<div class="container">
+				<h2 class="text-center text-uppercase">Achievements</h2>
+				<hr class="my-4">
+				<div class="row" id="achievements"></div>
+			</div>
+		</section>
+
+		<section class="bg-light text-dark py-5" id="supporters">
+			<div class="container">
+				<h2 class="text-center text-uppercase">Supporters</h2>
+				<hr class="my-4">
+				<div class="row">
+					<div class="col-sm-12 col-md-6 mb-4">
+						<img class="img-fluid mx-auto d-block supporter" src="assets/supporters/nelo.png" alt="Nelo Kayaks" width="300" height="200"\>
+					</div>
+					<div class="col-sm-12 col-md-6">
+						<img class="img-fluid mx-auto d-block supporter" src="assets/supporters/braca.png" alt="Braca-Sport" width="300" height="200"\>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<footer class="copyright py-4 text-center text-dark bg-primary">
+			<div class="container">
+				<p>Copyright © Bojan Zdelar 2020</p>
+			</div>
+		</footer>
 	</body>
 </html>
