Adjustment of header image

--- a/index.html
+++ b/index.html
@@ -12,34 +12,36 @@
 
 	<body id="page-top">
 
-		<!-- Navigation bar -->
-		<nav class="navbar navbar-expand-md navbar-light bg-light text-uppercase fixed-top shadow">
-			<div class="container">
-				<a class="navbar-brand" href="#page-top">Bojan Zdelar</a>
-
-				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-
-				<div class="collapse navbar-collapse" id="navbarResponsive">
-					<ul class="navbar-nav me-auto">
-						<li class="nav-item"><a class="nav-link py-3 px-lg-3" href="#about">About</a></li>
-						<li class="nav-item"><a class="nav-link py-3 px-lg-3" href="#achievements">Achievements</a></li>
-						<li class="nav-item"><a class="nav-link py-3 px-lg-3" href="#supporters">Supporters</a></li>
-					</ul>
-
-					<ul class="navbar-social">
-						<li><a class="py-3" href="https://www.facebook.com/bojanzdelar/" target="blank"><img src="https://img.icons8.com/fluent/48/000000/facebook-new.png"/></a></li>
-						<li><a class="py-3" href="https://www.instagram.com/bojanzdelar/" target="blank"><img src="https://img.icons8.com/fluent/48/000000/instagram-new.png"/></a></li>
-						<li><a class="py-3" href="mailto:bojan@zdelar.com"><img src="https://img.icons8.com/fluent/48/000000/gmail--v1.png"/></a>
-					</ul>
-				</div>
-
-			</div>
-		</nav>
-
 		<!-- Header -->
-		<header></header>
+		<header>
+
+			<!-- Navigation bar -->
+			<nav class="navbar navbar-expand-md navbar-light bg-light text-uppercase">
+				<div class="container">
+					<a class="navbar-brand" href="#page-top">Bojan Zdelar</a>
+
+					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+						<span class="navbar-toggler-icon"></span>
+					</button>
+
+					<div class="collapse navbar-collapse" id="navbarResponsive">
+						<ul class="navbar-nav me-auto">
+							<li class="nav-item"><a class="nav-link py-3 px-lg-3" href="#about">About</a></li>
+							<li class="nav-item"><a class="nav-link py-3 px-lg-3" href="#achievements">Achievements</a></li>
+							<li class="nav-item"><a class="nav-link py-3 px-lg-3" href="#supporters">Supporters</a></li>
+						</ul>
+
+						<ul class="navbar-social">
+							<li><a class="py-3" href="https://www.facebook.com/bojanzdelar/" target="blank"><img src="https://img.icons8.com/fluent/48/000000/facebook-new.png"/></a></li>
+							<li><a class="py-3" href="https://www.instagram.com/bojanzdelar/" target="blank"><img src="https://img.icons8.com/fluent/48/000000/instagram-new.png"/></a></li>
+							<li><a class="py-3" href="mailto:bojan@zdelar.com"><img src="https://img.icons8.com/fluent/48/000000/gmail--v1.png"/></a>
+						</ul>
+					</div>
+
+				</div>
+			</nav>
+
+		</header>
 
 		<!-- About section -->
 		<section class="bg-light text-dark py-5" id="about">
@@ -74,10 +76,10 @@
 				<nav aria-label="Achievements paging">
 					<ul class="pagination pagination-lg justify-content-center mt-3">
 						<li class="page-item" id="page-prev">
-							<a class="page-link" href="#achievements" aria-label="Previous">Previous</a>
+							<a class="page-link text-dark" href="#achievements" aria-label="Previous">Previous</a>
 						</li>
 						<li class="page-item" id="page-next">
-							<a class="page-link" href="#achievements" aria-label="Next">Next</a>
+							<a class="page-link text-dark" href="#achievements" aria-label="Next">Next</a>
 					  </li>
 					</ul>
 				</nav>
