Tweaks for mobile and tablet devices

--- a/index.html
+++ b/index.html
@@ -92,15 +92,15 @@
 			<div class="container">
 				<h2 class="text-center text-uppercase">Supporters</h2>
 				<hr class="my-4">
-				<div class="row">
-					<div class="col-sm-12 col-md-6 mb-4">
+				<div class="row justify-content-center">
+					<div class="col-6 col-md-4 col-xl-3">
 						<a href="https://www.nelo.eu" target="blank">
-							<img class="img-fluid mx-auto d-block supporter" src="assets/supporters/nelo.png" alt="Nelo Kayaks" width="300" height="200"\>
+							<img class="img-fluid mx-auto d-block supporter" src="assets/supporters/nelo.png" alt="Nelo Kayaks"\>
 						</a>
 					</div>
-					<div class="col-sm-12 col-md-6">
+					<div class="col-6 col-md-4 col-xl-3">
 						<a href="https://paddles.braca-sport.com" target="blank">
-							<img class="img-fluid mx-auto d-block supporter" src="assets/supporters/braca.png" alt="Braca-Sport" width="300" height="200"\>
+							<img class="img-fluid mx-auto d-block supporter" src="assets/supporters/braca.png" alt="Braca-Sport"\>
 						</a>
 					</div>
 				</div>
