Added meta description

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
+		<meta name="description" content="Bojan Zdelar">
+		<meta name="keywords" content="Bojan Zdelar">
+		<meta name="author" content="Bojan Zdelar">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="css/bootstrap.css" rel="stylesheet">
 		<link href="css/style.css" rel="stylesheet">
@@ -18,7 +21,9 @@
 			<!-- Navigation bar -->
 			<nav class="navbar navbar-expand-md navbar-light bg-light text-uppercase">
 				<div class="container">
-					<a class="navbar-brand" href="#page-top">Bojan Zdelar</a>
+					<h1>
+						<a class="navbar-brand" href="#page-top">Bojan Zdelar</a>
+					</h1>
 
 					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="navbar-toggler-icon"></span>
