--- a/index.html
+++ b/index.html
@@ -31,15 +31,41 @@
 
 					<div class="collapse navbar-collapse" id="navbarResponsive">
 						<ul class="navbar-nav me-auto">
-							<li class="nav-item"><a class="nav-link py-3 px-lg-3" href="#about">About</a></li>
-							<li class="nav-item"><a class="nav-link py-3 px-lg-3" href="#achievements">Achievements</a></li>
-							<li class="nav-item"><a class="nav-link py-3 px-lg-3" href="#supporters">Supporters</a></li>
+							<li class="nav-item">
+								<a class="nav-link py-3 px-lg-3" href="#about">About</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link py-3 px-lg-3" href="#achievements">Achievements</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link py-3 px-lg-3" href="#contact">Contact</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link py-3 px-lg-3" href="#supporters">Supporters</a>
+							</li>
 						</ul>
 
-						<ul class="navbar-social">
-							<li><a class="py-3" href="https://www.facebook.com/bojanzdelar/" target="blank"><img src="https://img.icons8.com/fluent/48/000000/facebook-new.png"/></a></li>
-							<li><a class="py-3" href="https://www.instagram.com/bojanzdelar/" target="blank"><img src="https://img.icons8.com/fluent/48/000000/instagram-new.png"/></a></li>
-							<li><a class="py-3" href="mailto:bojan@zdelar.com"><img src="https://img.icons8.com/fluent/48/000000/gmail--v1.png"/></a>
+						<hr>
+
+						<ul class="navbar-nav">
+							<li class="nav-item">
+								<a class="nav-link py-3" href="https://www.facebook.com/bojanzdelar/" target="blank">
+									<img src="https://img.icons8.com/metro/26/000000/facebook.png"/>
+									<small class="d-md-none">Facebook</small>
+								</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link py-3" href="https://www.instagram.com/bojanzdelar/" target="blank">
+									<img src="https://img.icons8.com/metro/26/000000/instagram-new.png"/>
+									<small class="d-md-none">Instagram</small>
+								</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link py-3" href="https://en.wikipedia.org/wiki/Bojan_Zdelar" target="blank">
+									<img src="https://img.icons8.com/metro/26/000000/wikipedia.png"/>
+									<small class="d-md-none">Wikipedia</small>
+								</a>
+							</li>
 						</ul>
 					</div>
 
@@ -52,7 +78,7 @@
 		<section class="bg-light text-dark py-5" id="about">
 			<div class="container">
 				<h2 class="text-center text-uppercase">About</h2>
-				<hr>
+				<hr class="my-4">
 				<p>
 					Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, iure ullam voluptatum quod quia vel porro dicta? Debitis dolor quisquam earum nesciunt. Porro provident consequuntur quod. Tempora aspernatur velit ipsum?
 					Eius unde laboriosam nihil adipisci non omnis doloribus aliquam enim pariatur autem, hic provident error nostrum itaque eaque reiciendis voluptate et animi ducimus? Molestiae labore repellat nobis dignissimos, quam quibusdam.
@@ -83,29 +109,61 @@
 						<li class="page-item" id="page-prev">
 							<a class="page-link text-dark" href="#achievements" aria-label="Previous">Previous</a>
 						</li>
-						<li class="page-item" id="page-next">
+						<li class="btn-outline-dark" id="page-next">
 							<a class="page-link text-dark" href="#achievements" aria-label="Next">Next</a>
-					  </li>
+					  	</li>
 					</ul>
 				</nav>
+			</div>
+		</section>
 
+		<!-- Contact section -->
+		<section class="bg-light text-dark py-5" id="contact">
+			<div class="container">
+				<h2 class="text-center text-uppercase">Contact</h2>
+				<hr class="my-4">
+				<div class="row">
+					<div class="col-lg-8 mx-auto">
+						<form>
+							<div class="py-2">
+								<label for="name" class="col-form-label-lg">Name</label>
+								<br>
+								<input class="form-control form-control-lg" type="text" id="name" placeholder="Enter your name">
+							</div>
+							<div class="py-2">
+								<label for="email" class="col-form-label-lg">Email Adress</label>
+								<br>
+								<input class="form-control form-control-lg" type="text" id="email" placeholder="Enter your email">
+							</div>
+							<div class="py-2">
+								<label for="message" class="col-form-label-lg">Message</label>
+								<br>
+								<textarea class="form-control form-control-lg" id="message" placeholder="Your message here..." rows="4"></textarea>
+							</div>
+
+							<div class="pt-4 text-end">
+								<button type="submit" class="btn btn-outline-dark btn-lg" id="sendMessage">Send the message</button>
+							</div>
+						</form>
+					</div>
+				</div>
 			</div>
 		</section>
 
 		<!-- Supporters section -->
-		<section class="bg-light text-dark py-5" id="supporters">
+		<section class="bg-primary text-dark py-5" id="supporters">
 			<div class="container">
 				<h2 class="text-center text-uppercase">Supporters</h2>
 				<hr class="my-4">
 				<div class="row justify-content-center">
 					<div class="col-6 col-md-4 col-xl-3">
 						<a href="https://www.nelo.eu" target="blank">
-							<img class="img-fluid mx-auto d-block supporter" src="assets/supporters/nelo.png" alt="Nelo Kayaks"\>
+							<img class="img-fluid mx-auto d-block" src="assets/supporters/nelo.png" alt="Nelo Kayaks"\>
 						</a>
 					</div>
 					<div class="col-6 col-md-4 col-xl-3">
 						<a href="https://paddles.braca-sport.com" target="blank">
-							<img class="img-fluid mx-auto d-block supporter" src="assets/supporters/braca.png" alt="Braca-Sport"\>
+							<img class="img-fluid mx-auto d-block" src="assets/supporters/braca.png" alt="Braca-Sport"\>
 						</a>
 					</div>
 				</div>
@@ -113,7 +171,7 @@
 		</section>
 
 		<!-- Copyright section -->
-		<section class="py-4 text-center text-dark bg-primary">
+		<section class="py-4 text-center text-dark bg-light">
 			<div class="container">
 				<small>Copyright © Bojan Zdelar 2020</small>
 			</div>
