--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta name="keywords" content="Bojan Zdelar">
 		<meta name="author" content="Bojan Zdelar">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="shortcut icon" href="/assets/logo.png">
 		<link href="css/bootstrap.css" rel="stylesheet">
 		<link href="css/style.css" rel="stylesheet">
 		<script src="js/bootstrap.js"></script>
