Enabled contact form

--- a/index.html
+++ b/index.html
@@ -124,7 +124,8 @@
 				<h2 class="text-center text-uppercase">Contact</h2>
 				<hr class="my-4">
 				<div class="row">
-					<form class="col-lg-8 mx-auto needs-validation" action="/contact" method="POST" novalidate>
+					<form class="col-lg-8 mx-auto needs-validation" novalidate>
+						
 						<div class="py-2">
 							<label for="name" class="col-form-label-lg">Name</label>
 							<br>
