Prevent redirect when submitting form

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 		<link href="css/bootstrap.css" rel="stylesheet">
 		<link href="css/style.css" rel="stylesheet">
 		<script src="js/bootstrap.js"></script>
-		<script src="js/script.js" defer></script>
+		<script src="js/achievements.js" defer></script>
+		<script src="js/contact.js" defer></script>
 		<title>Bojan Zdelar</title>
 	</head>
 
@@ -125,7 +126,7 @@
 				<hr class="my-4">
 				<div class="row">
 					<form class="col-lg-8 mx-auto needs-validation" novalidate>
-						
+
 						<div class="py-2">
 							<label for="name" class="col-form-label-lg">Name</label>
 							<br>
