--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<link href="css/bootstrap.css" rel="stylesheet">
 		<link href="css/style.css" rel="stylesheet">
 		<script src="js/bootstrap.js"></script>
+		<script src="js/data.js"></script>
 		<script src="js/achievements.js" defer></script>
 		<script src="js/contact.js" defer></script>
 		<title>Bojan Zdelar</title>
