Added new images

--- a/index.html
+++ b/index.html
@@ -132,12 +132,12 @@
         <p class="fs-5">
           I started paddling when I was twelve years old. At fifteen years of
           age, I have made my debut for Serbia's national team. Since then, I
-          have won many international medals at Olympic Hopes, European and
-          World Junior Championships, and European U23 Championships. While
-          competing in the senior category, I have managed to qualify in finals
-          at European Championships and World Cups. Currently, I am preparing to
-          make a debut at the Olympic Games in Tokyo, which is a dream of mine.
-          Outside of paddling, I love programming.
+          have won many international medals at Olympic Hopes and European and
+          World Championships for Juniors and U23. While competing in the senior
+          category, I have qualified to finals at World Championships, European
+          Championships, and World Cups. I have been honored to be a part of the
+          Serbian Olympic team at the Olympic Games in Tokyo 2020. Outside of
+          paddling, I love programming.
         </p>
       </div>
     </section>
@@ -275,7 +275,7 @@
     <!-- Copyright section -->
     <section class="py-4 text-center text-dark bg-light">
       <div class="container">
-        <p>Copyright © Bojan Zdelar 2020</p>
+        <p>Copyright © Bojan Zdelar 2021</p>
       </div>
     </section>
   </body>
