Fixed pagination bug

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
     <link rel="stylesheet" href="css/style.css" />
     <script src="js/achievements.js" defer></script>
+    <script src="js/pagination.js" defer></script>
     <script src="js/contact.js" defer></script>
 
     <title>Bojan Zdelar</title>
