--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
           <div
             class="col-6 col-md-4 col-xl-3 d-flex align-items-center mb-3 mb-md-0"
           >
-            <a href="https://www.nelo.eu" target="blank">
+            <a href="https://www.invendagroup.com/" target="blank">
               <img
                 class="img-fluid mx-auto d-block"
                 src="assets/supporters/invenda.png"
