--- a/index.html
+++ b/index.html
@@ -108,6 +108,18 @@
                   <span class="d-md-none ms-1">Wikipedia</span>
                 </a>
               </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link py-3 py-md-2"
+                  href="https://www.github.com/BojanZdelar"
+                  target="blank"
+                >
+                  <img
+                    src="https://img.icons8.com/metro/26/000000/github.png"
+                  />
+                  <span class="d-md-none ms-1">GitHub</span>
+                </a>
+              </li>
             </ul>
           </div>
         </div>
