Added new achievements

--- a/index.html
+++ b/index.html
@@ -140,7 +140,8 @@
           category, I have qualified to finals at World Championships, European
           Championships, and World Cups. I have been honored to be a part of the
           Serbian Olympic team at the Olympic Games in Tokyo 2020. Outside of
-          paddling, I love programming.
+          paddling, I love programming and I hold a Bachelor's degree in
+          Software Engineering.
         </p>
       </div>
     </section>
